--- a/less/variables.less
+++ b/less/variables.less
@@ -18,15 +18,15 @@
 @columns: 5;
 @screenshot-bg: #222;
 @board-background-color: #111;
-@board-border-width: 4px;
-@board-border-color: #3A335D;
+@border-width: 4px;
+@border-color: #3A335D;
 @board-border-radius: 20px;
 @board-score-height: 80px;
 @board-counter-width: 120px;
 @board-counter-height: @board-counter-width;
 @board-block-preview-padding: 0.4 * @block-width;
 @board-block-preview-width: @block-width + (@board-block-preview-padding * 2);
-@board-width: @columns * @block-width + (@board-border-width * 2);
-@board-height: @rows * @block-height + (@board-border-width * 2);
-@board-container-height: @board-height + @board-score-height - @board-border-width;
-@board-block-preview-height: (@board-block-preview-padding * 3) + (@block-height * 2) + (@board-border-width * 2);
+@board-width: @columns * @block-width + (@border-width * 2);
+@board-height: @rows * @block-height + (@border-width * 2);
+@board-container-height: @board-height + @board-score-height - @border-width;
+@board-block-preview-height: (@board-block-preview-padding * 3) + (@block-height * 2) + (@border-width * 2);
